Updated Cart Page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,7 +16,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css" /> -->
     <!--owl slider stylesheet -->
     <link
       rel="stylesheet"
