added sending Mail Functionality

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,12 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css" /> -->
     <!--owl slider stylesheet -->
     <link
