--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,7 +31,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
 
-    <title>My Shop</title>
+    <title>AngelShop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
